# gs-data-dig

./: README.md  analyze_trimmed_data_council_02.ipynb  analyze_trimmed_data_unit.ipynb  analyze_trimmed_data_unit_02.ipynb  analyzed_2025_troop_booth_signups_unit.ipynb  booth_signups_per_troop_summary.csv  main.py  notebook.ipynb  notebook_02.ipynb  notebook_council_02.ipynb  notebook_council_03.ipynb  notebook_unit_02.ipynb  notebook_unit_03.ipynb  pyproject.toml  troop_booth_summary.csv
data/: 2025_booth_counts.csv  2025_booth_signup_unit.csv  2025_booth_signups_council.csv  2025_booth_signups_council_trimmed.csv  2025_booth_signups_unit.csv  2025_booth_signups_unit_trimmed.csv  2025_troop_size_unit.csv
html/: notebook_council_01.html  notebook_unit_01.html
