[tool.poetry]
name = "az-cactus-pine-data"
version = "0.1.0"
description = "Analyze booth signup data"
authors = ["Dave Kujawski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pip = "^25.0"
ipykernel = "^6.29.5"
db-sqlite3 = "^0.0.1"
pysqlite3 = "^0.5.4"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
nbconvert = "^7.16.6"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
